--- a/recipes.html
+++ b/recipes.html
@@ -5,7 +5,7 @@
 	<th>Published</th> 
 	<th>Publisher</th> 
 	<th>ISBN</th> 
-	<th>Paperback</th>
+	<th>Binding</th>
 	<th>Note</th>
     </tr>
     <tr>
